--- a/.prettierrc.yml
+++ b/.prettierrc.yml
@@ -1,12 +1,16 @@
-# Docs at https://prettier.io/docs/en/options.html
-
 semi: false
 useTabs: false
 tabWidth: 2
-printWidth: 100
 singleQuote: true
-trailingComma: all
+trailingComma: es5
 bracketSpacing: true
+jsxSingleQuote: true
 jsxBracketSameLine: false
 arrowParens: avoid
+quoteProps: as-needed
 endOfLine: lf
+
+overrides:
+  - files: '*.scss'
+    options:
+      singleQuote: false
