--- a/nuxt/headphones/package.json
+++ b/nuxt/headphones/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore ."
   },
   "lint-staged": {
-    "*.{js,vue}": "eslint"
+    "*.{js,vue}": "eslint --fix"
   },
   "husky": {
     "hooks": {
@@ -23,14 +23,14 @@
     "@nuxtjs/style-resources": "^1.0.0",
     "bezier-easing": "^2.1.0",
     "font-awesome": "^4.7.0",
-    "highlight.js": "^9.15.9",
+    "highlight.js": "^9.15.10",
     "intersection-observer": "^0.7.0",
     "lozad": "^1.9.0",
     "marked": "^0.7.0",
     "mini-toastr": "^0.8.1",
-    "nuxt": "^2.0.0",
+    "nuxt": "^2.9.2",
     "simple-lightbox": "^2.1.0",
-    "vue-analytics": "^5.17.0",
+    "vue-analytics": "^5.17.2",
     "vue-notifications": "^1.0.2"
   },
   "devDependencies": {
