--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
   "name": "miscellaneous",
   "version": "1.0.0",
-  "main": "index.js",
-  "author": "ntnyq <ntnyq13@gmail.com>",
+  "author": {
+    "name": "ntnyq",
+    "email": "ntnyq13@gmail.com"
+  },
   "license": "MIT",
   "husky": {
     "hooks": {
@@ -16,8 +18,8 @@
     ]
   },
   "devDependencies": {
-    "husky": "^2.4.0",
-    "lint-staged": "^8.1.5",
+    "husky": "^3.0.5",
+    "lint-staged": "^9.2.5",
     "prettier": "^1.16.4"
   }
 }
