--- a/package.json
+++ b/package.json
@@ -1,6 +1,12 @@
 {
   "name": "miscellaneous",
   "version": "0.0.1",
+  "repository": "https://github.com/ntnyq/miscellaneous.git",
+  "license": "MIT",
+  "author": {
+    "name": "ntnyq",
+    "email": "ntnyq13@gmail.com"
+  },
   "scripts": {
     "pretty": "prettier --write src/**/*.js",
     "pub": "sh scripts/deploy.sh"
@@ -14,17 +20,16 @@
     "*.{js,json}": [
       "prettier --write",
       "git add"
+    ],
+    "package.json": [
+      "sort-package-json",
+      "git add"
     ]
   },
-  "author": {
-    "name": "ntnyq",
-    "email": "ntnyq13@gmail.com"
-  },
-  "license": "MIT",
-  "repository": "https://github.com/ntnyq/miscellaneous.git",
   "devDependencies": {
-    "husky": "^3.0.5",
-    "lint-staged": "^9.2.5",
-    "prettier": "^1.18.2"
+    "husky": "^3.0.9",
+    "lint-staged": "^9.4.2",
+    "prettier": "^1.18.2",
+    "sort-package-json": "^1.22.1"
   }
 }
