--- a/src/tools/iconfont/package.json
+++ b/src/tools/iconfont/package.json
@@ -1,22 +1,22 @@
 {
   "name": "iconfont",
   "version": "0.0.1",
+  "license": "MIT",
+  "author": "ntnyq <ntnyq13@gmail.com> (https://ntnyq.com)",
   "main": "index.js",
   "scripts": {
     "dev": "gulp icon",
-    "svgo": "svgo -f src/icons/source --config=src/icons/svgo.yml -o src/icons/svg"
+    "svgo": "svgo -f src/icons/origin --config=src/icons/svgo.yml -o src/icons/output"
   },
-  "author": "ntnyq <ntnyq13@gmail.com> (https://ntnyq.com)",
-  "license": "MIT",
+  "dependencies": {
+    "glob": "^7.1.6"
+  },
   "devDependencies": {
+    "@vusion/webfonts-generator": "^0.6.0",
     "gulp": "^4.0.2",
     "gulp-iconfont": "^10.0.3",
     "gulp-iconfont-css": "^3.0.0",
     "gulp-load-plugins": "^2.0.1",
     "svgo": "^1.3.2"
-  },
-  "dependencies": {
-    "glob": "^7.1.6",
-    "vusion-webfonts-generator": "^0.4.1"
   }
 }
